@@ -658,6 +658,17 @@ include( "../include/output.inc.php" );
 							   		<td>&nbsp;</td>
 							   	</tr>
 							   	<tr>
+							   		<td nowrap><strong><?php print _("SVN access file sort order").": "; ?></strong></td>
+							   		<td>
+							   			<input type="radio" name="fPathSortOrder" value="ASC" <?php print $tPathSortOrderAsc; ?> />&nbsp;&nbsp;<?php print _("ASC"); ?>&nbsp;&nbsp;&nbsp;
+						   				<input type="radio" name="fPathSortOrder" value="DESC" <?php print $tPathSortOrderdESC; ?> />&nbsp;&nbsp;<?php print _("DEC"); ?>
+							   		</td>
+							   		<td>
+							   			&nbsp;
+							   		</td>
+							   		<td>&nbsp;</td>
+							   	</tr>
+							   	<tr>
 							   		<td nowrap><strong><?php print _("Create ViewVC configuration").": "; ?></strong></td>
 							   		<td>
 							   			<input type="radio" name="fViewvcConfig" value="YES" <?php print $tViewvcConfigYes; ?> />&nbsp;&nbsp;<?php print _("Yes"); ?>&nbsp;&nbsp;&nbsp;
